--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>COBU-TECH INDUSTRY</title>
     <link rel="stylesheet" href="/public/css/styles.css">
     <noscript>
-        <meta http-equiv="refresh" content="3;url=/waiting.html">
+        <meta http-equiv="refresh" content="3;url=/public/waiting.html">
     </noscript>
 </head>
 <body>
