--- a/public/main.html
+++ b/public/main.html
@@ -27,7 +27,7 @@
 
     <div class="contact-admin">
         <p>In order to contact the admin:</p>
-        <button class="purple-button">Contact Admin</button>
+        <button id="contactButton" class="purple-button">Contact Admin</button>
     </div>
 
     <footer>
