--- a/public/verification.html
+++ b/public/verification.html
@@ -25,20 +25,17 @@
             <p id="wait-message" style="display: none; color: red;">Too many attempts. You can request a new code again in <span id="wait-countdown"></span>.</p>
         </div>
     </div>
-    <div class="background-text">
-        <span style="--i:1">P</span>
-        <span style="--i:2">L</span>
-        <span style="--i:3">E</span>
-        <span style="--i:4">A</span>
-        <span style="--i:5">S</span>
-        <span style="--i:6">E</span>
-        <span style="--i:7">&nbsp;</span>
-        <span style="--i:8">V</span>
-        <span style="--i:9">E</span>
-        <span style="--i:10">R</span>
-        <span style="--i:11">I</span>
-        <span style="--i:12">F</span>
-        <span style="--i:13">Y</span>
+    <div class="background-text-container">
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
+        <div class="background-text">Please verify cobutech industry</div>
     </div>
     <script src="/public/js/verification.js"></script>
 </body>
